--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ django-bootstrap3==10.0.1
 gunicorn==19.7.1
 Pillow==5.2.0
 psycopg2==2.7.5
+psycopg2-binary==2.7.5
 python-decouple==3.1
 pytz==2018.5
 SQLAlchemy==1.2.8
-whitenoise==4.0
+whitenoise==3.3.1
